# FlappyAi

./: .gitignore  BestEntityFile.txt  CMakeLists.txt  Map2.txt  Map3.txt  README.md  best_gp.txt  best_neural_network.txt  flappyNakonMedju.cbp  flappyNakonMedju.depend  flappyNakonMedju.layout  map2.txt  map3.txt  map4.txt  map5.txt  saved.txt
FlappyCGP/src/: Agent.java  Constants.java  Controller.java  Entity.java  Gene.java  Main.java  Map2.txt  Population.java  Simulator.java
SFML/: Agent.h  BestEntityFile  CGP.cpp  CGP.h  CGPIndividual.cpp  CGPIndividual.h  CGP_best.txt  CMakeLists.txt  CMakePresets.json  ConfigParser.h  Controller.h  Entity.cpp  Entity.h  GP2_main.h  Gene.cpp  Gene.h  LiberationSansFont.h  Map1.txt  Map2.txt  Map3.txt  Map4.txt  NNlogic.cpp  NNlogic.h  NeuralNetwork.h  Node.h  Parameters.cpp  Parameters.h  Population.cpp  Population.h  SFML.vcxproj  SFML.vcxproj.filters  SelectionScreen.cpp  SelectionScreen.h  Simulator.cpp  Simulator.h  TreeControll.cpp  TreeControll.h  best_gp.txt  best_neural_network.txt  config.conf  (+3 more)
SFML/cgp_andrija/: CGP1.cpp  CGP1.h  CGP1Individual.cpp  CGP1Individual.h  CGP1Node.h  CGP1Output.h
SFML/cgp_andrija/best/: CGP1_2.txt
SFML/cgp_nikla/: Constants.h  Entity.cpp  Entity.h  Gene.cpp  Gene.h  Population.cpp  Population.h  mainFunctionsHeader.h
SFML/gp_filip/: GP2_main.h  TreeControll.cpp  TreeControll.h
SFML/gp_tonka/: FunctionBinaryTree.cpp  FunctionBinaryTree.h  GA.cpp  GA.h  TreeParser.cpp  TreeParser.h  best_gp.txt  tonka.cpp
SFML/nn/: NNlogic.cpp  NNlogic.h  NeuralNetwork.cpp
src/: Agent.cpp  Agent.h  CGP.cpp  CGP.h  CGP_best.txt  Controller.h  FitnessCalculator.cpp  FitnessCalculator.h  FunctionBinaryTree.cpp  FunctionBinaryTree.h  GPcontroller.h  Individual.cpp  Individual.h  Map.h  Node.h  Output.h  Simulator.cpp  Simulator.h  TreeControll.cpp  TreeControll.h  a.out  ga.cpp  linuxMac.cpp  linuxMac.h  main.cpp  mainCopy.cpp  map.txt  map1.txt  map2.txt  map3.txt  map3_5.txt  map4.txt  map_hard.txt
